Fix image clipping

--- a/sass/application/_provisioning.scss
+++ b/sass/application/_provisioning.scss
@@ -88,7 +88,6 @@
     background-color: transparent;
     background-repeat: no-repeat;
     background-position: center;
-    background-size: cover;
     z-index: 5;
     @media (max-width: var(--pf-global--breakpoint--md)) {
       display: none;
